# bagz

./: .gitignore  CMakeLists.txt  README.md  conftest.py  pyproject.toml
beam/: bagzio.py  bagzio_test.py
cmake/: bagz_cc.cmake  third_party_absl.cmake  third_party_gcs.cmake  third_party_pybind11.cmake  third_party_zstd.cmake
src/: bagz_index.cc  bagz_index.h  bagz_iterator.h  bagz_multi_index.cc  bagz_multi_index.h  bagz_options.h  bagz_reader.cc  bagz_reader.h  bagz_writer.cc  bagz_writer.h
src/file/: file.cc  file.h
src/file/file_system/: file_system.cc  file_system.h  mock_file_system.h  pread_file.cc  pread_file.h  shard_spec.cc  shard_spec.h  string_pread_file.cc  string_pread_file.h  write_file.h
src/file/file_systems/gcs/: gcs_file_system.cc  gcs_file_system.h
src/file/file_systems/posix/: posix_file_system.cc  posix_file_system.h
src/file/registry/: file_system_registry.cc  file_system_registry.h  register_file_systems.cc  register_file_systems.h
src/internal/: bagz_shard_reader.cc  bagz_shard_reader.h  limits_name.cc  limits_name.h  parallel_do.cc  parallel_do.h  records_limits.cc  records_limits.h  recycling_pool.h  serialize.h  shard_indexing.cc  shard_indexing.h  zstd_compressor.cc  zstd_compressor.h  zstd_decompressor.cc  zstd_decompressor.h
src/python/: bagz.cc  bagz.pyi  bagz_index.cc  bagz_index.h  bagz_multi_index.cc  bagz_multi_index.h  bagz_options.cc  bagz_options.h  bagz_reader.cc  bagz_reader.h  bagz_test.py  bagz_writer.cc  bagz_writer.h
